<resources>
    <string name="app_name">La Liga</string>
    <string name="Rank">Pos</string>
    <string name="team">Club</string>
    <string name="games">P</string>
    <string name="Pts">Pts</string>
    <string name="goals">Goals</string>
    <string name="assists">Assists</string>
    <string name="yellows">Yellows</string>
    <string name="reds">Reds</string>
    <string name="table">table</string>
    <string name="stats">stats</string>
    <string name="schedule">schedule</string>
    <string name="player">Player</string>
    <string name="league_clubs">League clubs</string>
    <string name="players">Players</string>
    <string name="clubs">clubs</string>
    <string name="value">Value</string>
    <string name="round">Round</string>
    <string name="use_this_to_go_ntournament_table">Use this to go\ntournament table</string>
    <string name="click_it_to_go_rankings_screen">Click it to go\nrankings screen</string>
    <string name="click_to_go_team_profile_screen">Click to go\nteam profile screen</string>
    <string name="click_it_to_go_schedule_screen">Click it to go\nschedule screen</string>
    <string name="manager_name">Manager name</string>
    <string name="bma">Manager nationality</string>
    <string name="stadium_name">Stadium name</string>
    <string name="no_connection">No connection!!</string>
    <string name="stadium_capacity">Stadium capacity</string>
    <string name="city">City</string>
    <string name="position">Pos</string>
    <string name="matches_won">Matches won</string>
    <string name="matches_drawn">Matches drawn</string>
    <string name="matches_lost">Matches lost</string>
    <string name="goal_scored">Goal scored</string>
    <string name="goals_conceded">Goals conceded</string>
    <string name="num">Num</string>
    <string name="name">Name</string>
    <string name="nation">Nation</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="birth">Birth</string>
</resources>
