<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"

>
    <data>
        <variable name="viewModel" type="inkant1990gmail.com.laliga.screen.table.TableViewModel"/>
    </data>

    <android.support.constraint.ConstraintLayout
            android:id="@+id/activity_main"
            style="@style/LaligaStyleBack"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <FrameLayout
                android:id="@+id/homeContainer"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintHeight_default="percent"
                app:layout_constraintHeight_percent="0.9"
                app:layout_constraintTop_toTopOf="parent"
        />
        <LinearLayout
                app:layout_constraintTop_toBottomOf="@id/homeContainer"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintHeight_percent="0.1"
                app:layout_constraintHeight_default="percent"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
        >
            <Button android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    style="@style/LaligaStyleTop"
                    android:text="@string/table"
                    android:onClick="@{(v) -> viewModel.goToTable(v)  }"/>
            <Button android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    style="@style/LaligaStyleTop"
                    android:text="@string/stats"
                    android:onClick="@{(v) -> viewModel.goToStats(v)  }"/>
            <Button android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    style="@style/LaligaStyleTop"
                    android:onClick="@{(v) -> viewModel.goToSchedule(v)}"
                    android:text="@string/schedule"/>
        </LinearLayout>


    </android.support.constraint.ConstraintLayout>
</layout>