<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="viewModel" type="inkant1990gmail.com.laliga.screen.teamProfile.players.PlayersListViewModel"/>
    </data>
    <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
    >
        <TextView android:id="@+id/tvNumber"
                  android:text="@string/num"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  app:layout_constraintWidth_default="percent"
                  app:layout_constraintWidth_percent="0.15"
                  app:layout_constraintTop_toTopOf="parent"
                  android:gravity="center"
                  app:layout_constraintStart_toStartOf="parent"
                  style="@style/LaligaStyleStandingsTop"
        />
        <TextView android:id="@+id/tvName"
                  android:text="@string/name"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  app:layout_constraintWidth_default="percent"
                  app:layout_constraintWidth_percent="0.4"
                  app:layout_constraintTop_toTopOf="parent"
                  android:gravity="center"
                  app:layout_constraintStart_toEndOf="@id/tvNumber"
                  style="@style/LaligaStyleStandingsTop"
        />
        <TextView android:id="@+id/tvNational"
                  android:text="@string/nation"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  app:layout_constraintWidth_default="percent"
                  app:layout_constraintWidth_percent="0.20"
                  app:layout_constraintTop_toTopOf="parent"
                  android:gravity="center"
                  app:layout_constraintStart_toEndOf="@id/tvName"
                  style="@style/LaligaStyleStandingsTop"
        />


        <TextView android:id="@+id/tvType"
                  android:text="@string/position"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  app:layout_constraintWidth_default="percent"
                  app:layout_constraintWidth_percent="0.25"
                  app:layout_constraintTop_toTopOf="parent"
                  android:gravity="center"
                  app:layout_constraintStart_toEndOf="@id/tvNational"
                  style="@style/LaligaStyleStandingsTop"
        />

        <android.support.v7.widget.RecyclerView
                android:id="@+id/recycle"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintHeight_default="percent"
                app:layout_constraintWidth_percent="1"
                app:layout_constraintHeight_percent="1"
                app:layout_constraintTop_toBottomOf="@id/tvNational"
                app:layout_constraintLeft_toLeftOf="parent"
        >
        </android.support.v7.widget.RecyclerView>
        <ImageView android:id="@+id/imgProgress"
                   android:layout_margin="10dp"
                   android:layout_width="0dp"
                   android:layout_height="0dp"
                   android:background="@color/Black"
                   app:layout_constraintHeight_default="percent"
                   app:layout_constraintHeight_percent="1"
                   app:layout_constraintWidth_default="percent"
                   app:layout_constraintWidth_percent="1"
                   style="@style/LaligaStyleStandingsItems"
                   app:layout_constraintRight_toRightOf="parent"
                   app:layout_constraintTop_toTopOf="parent"
                   app:layout_constraintLeft_toLeftOf="parent"
                   app:layout_constraintBottom_toBottomOf="parent"
                   android:src="@drawable/laliga_white"
                   app:visibility="@{viewModel.loading}"
        />
        <TextView android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:text="@string/no_connection"
                  app:visibility="@{viewModel.data}"
                  android:background="@color/Black"
                  android:textColor="@color/white"
                  style="@style/LaligaStyleStandingsItems"
                  app:layout_constraintRight_toRightOf="parent"
                  app:layout_constraintTop_toTopOf="parent"
                  app:layout_constraintLeft_toLeftOf="parent"
                  app:layout_constraintBottom_toBottomOf="parent"/>
    </android.support.constraint.ConstraintLayout>
</layout>