<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="viewModel" type="inkant1990gmail.com.laliga.screen.teamProfile.statistic.StatisticViewModel"/>
    </data>
    <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                 android:layout_height="match_parent">

        <TextView android:id="@+id/tvTeamNameTop"
                  android:layout_margin="10dp"
                  android:layout_width="0dp"
                  android:layout_height="0dp"
                  app:layout_constraintHeight_default="percent"
                  app:layout_constraintHeight_percent="0.1"
                  app:layout_constraintWidth_default="percent"
                  app:layout_constraintWidth_percent="0.3"
                  style="@style/LaligaStyleStandingsItems"
                  app:layout_constraintLeft_toLeftOf="parent"
                  app:layout_constraintTop_toBottomOf="@id/imgTeamLogo"
                  android:text="@string/position"

        />

        <TextView android:id="@+id/tvTeamName"
                  android:layout_margin="10dp"
                  android:layout_width="0dp"
                  android:layout_height="0dp"
                  app:layout_constraintHeight_default="percent"
                  app:layout_constraintHeight_percent="0.1"
                  app:layout_constraintWidth_default="percent"
                  app:layout_constraintWidth_percent="0.7"
                  style="@style/LaligaStyleStandingsItems"
                  app:layout_constraintLeft_toRightOf="@id/tvTeamNameTop"
                  app:layout_constraintTop_toBottomOf="@id/imgTeamLogo"
                  android:text="@{viewModel.groupPosition}"

        />

        <TextView android:id="@+id/tvManagerNameTop"
                  android:layout_margin="10dp"
                  android:layout_width="0dp"
                  android:layout_height="0dp"
                  app:layout_constraintHeight_default="percent"
                  app:layout_constraintHeight_percent="0.1"
                  app:layout_constraintWidth_default="percent"
                  app:layout_constraintWidth_percent="0.3"
                  style="@style/LaligaStyleStandingsItems"
                  app:layout_constraintLeft_toLeftOf="parent"
                  app:layout_constraintTop_toBottomOf="@id/tvTeamNameTop"
                  android:text="@string/matches_won"

        />

        <TextView android:id="@+id/tvManagerName"
                  android:layout_margin="10dp"
                  android:layout_width="0dp"
                  android:layout_height="0dp"
                  app:layout_constraintHeight_default="percent"
                  app:layout_constraintHeight_percent="0.1"
                  app:layout_constraintWidth_default="percent"
                  app:layout_constraintWidth_percent="0.7"
                  style="@style/LaligaStyleStandingsItems"
                  app:layout_constraintLeft_toRightOf="@id/tvManagerNameTop"
                  app:layout_constraintTop_toBottomOf="@id/tvTeamName"
                  android:text="@{viewModel.matchesWon}"

        />
        <TextView android:id="@+id/tvManagerNationalityTop"
                  android:layout_margin="10dp"
                  android:layout_width="0dp"
                  android:layout_height="0dp"
                  app:layout_constraintHeight_default="percent"
                  app:layout_constraintHeight_percent="0.1"
                  app:layout_constraintWidth_default="percent"
                  app:layout_constraintWidth_percent="0.3"
                  style="@style/LaligaStyleStandingsItems"
                  app:layout_constraintLeft_toLeftOf="parent"
                  app:layout_constraintTop_toBottomOf="@id/tvManagerNameTop"
                  android:text="@string/matches_drawn"
        />

        <TextView android:id="@+id/tvManagerNationality"
                  android:layout_margin="10dp"
                  android:layout_width="0dp"
                  android:layout_height="0dp"
                  app:layout_constraintHeight_default="percent"
                  app:layout_constraintHeight_percent="0.1"
                  app:layout_constraintWidth_default="percent"
                  app:layout_constraintWidth_percent="0.7"
                  style="@style/LaligaStyleStandingsItems"
                  app:layout_constraintLeft_toRightOf="@id/tvManagerNationalityTop"
                  app:layout_constraintTop_toBottomOf="@id/tvManagerName"
                  android:text="@{viewModel.matchesDrawn}"

        />
        <TextView android:id="@+id/tvStadiumNameTop"
                  android:layout_margin="10dp"
                  android:layout_width="0dp"
                  android:layout_height="0dp"
                  app:layout_constraintHeight_default="percent"
                  app:layout_constraintHeight_percent="0.1"
                  app:layout_constraintWidth_default="percent"
                  app:layout_constraintWidth_percent="0.3"
                  style="@style/LaligaStyleStandingsItems"
                  app:layout_constraintLeft_toLeftOf="parent"
                  app:layout_constraintTop_toBottomOf="@id/tvManagerNationalityTop"
                  android:text="@string/matches_lost"

        />

        <TextView android:id="@+id/tvStadiumName"
                  android:layout_margin="10dp"
                  android:layout_width="0dp"
                  android:layout_height="0dp"
                  app:layout_constraintHeight_default="percent"
                  app:layout_constraintHeight_percent="0.1"
                  app:layout_constraintWidth_default="percent"
                  app:layout_constraintWidth_percent="0.7"
                  style="@style/LaligaStyleStandingsItems"
                  app:layout_constraintLeft_toRightOf="@id/tvStadiumNameTop"
                  app:layout_constraintTop_toBottomOf="@id/tvManagerNationality"
                  android:text="@{viewModel.matchesLost}"

        />
        <TextView android:id="@+id/tvStadiumCapacityTop"
                  android:layout_margin="10dp"
                  android:layout_width="0dp"
                  android:layout_height="0dp"
                  app:layout_constraintHeight_default="percent"
                  app:layout_constraintHeight_percent="0.1"
                  app:layout_constraintWidth_default="percent"
                  app:layout_constraintWidth_percent="0.3"
                  style="@style/LaligaStyleStandingsItems"
                  app:layout_constraintLeft_toLeftOf="parent"
                  app:layout_constraintTop_toBottomOf="@id/tvStadiumName"
                  android:text="@string/goal_scored"
        />

        <TextView android:id="@+id/tvStadiumCapacity"
                  android:layout_margin="10dp"
                  android:layout_width="0dp"
                  android:layout_height="0dp"
                  app:layout_constraintHeight_default="percent"
                  app:layout_constraintHeight_percent="0.1"
                  app:layout_constraintWidth_default="percent"
                  app:layout_constraintWidth_percent="0.7"
                  style="@style/LaligaStyleStandingsItems"
                  app:layout_constraintLeft_toRightOf="@id/tvStadiumCapacityTop"
                  app:layout_constraintTop_toBottomOf="@id/tvStadiumName"
                  android:text="@{viewModel.goalsScored}"

        />
        <TextView android:id="@+id/tvCityTop"
                  android:layout_margin="10dp"
                  android:layout_width="0dp"
                  android:layout_height="0dp"
                  app:layout_constraintHeight_default="percent"
                  app:layout_constraintHeight_percent="0.1"
                  app:layout_constraintWidth_default="percent"
                  app:layout_constraintWidth_percent="0.3"
                  style="@style/LaligaStyleStandingsItems"
                  app:layout_constraintLeft_toLeftOf="parent"
                  app:layout_constraintTop_toBottomOf="@id/tvStadiumCapacityTop"
                  android:text="@string/goals_conceded"
        />

        <TextView android:id="@+id/tvCity"
                  android:layout_margin="10dp"
                  android:layout_width="0dp"
                  android:layout_height="0dp"
                  app:layout_constraintHeight_default="percent"
                  app:layout_constraintHeight_percent="0.1"
                  app:layout_constraintWidth_default="percent"
                  app:layout_constraintWidth_percent="0.7"
                  style="@style/LaligaStyleStandingsItems"
                  app:layout_constraintLeft_toRightOf="@id/tvCityTop"
                  app:layout_constraintTop_toBottomOf="@id/tvStadiumCapacity"
                  android:text="@{viewModel.goalsConceded}"

        />
        <ImageView android:id="@+id/imgProgress"
                   android:layout_margin="10dp"
                   android:layout_width="0dp"
                   android:layout_height="0dp"
                   android:background="@color/Black"
                   app:layout_constraintHeight_default="percent"
                   app:layout_constraintHeight_percent="1"
                   app:layout_constraintWidth_default="percent"
                   app:layout_constraintWidth_percent="1"
                   style="@style/LaligaStyleStandingsItems"
                   app:layout_constraintRight_toRightOf="parent"
                   app:layout_constraintTop_toTopOf="parent"
                   app:layout_constraintLeft_toLeftOf="parent"
                   app:layout_constraintBottom_toBottomOf="parent"
                   android:src="@drawable/laliga_white"
                   app:visibility="@{viewModel.loading}"
        />
        <TextView android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:text="@string/no_connection"
                  app:visibility="@{viewModel.data}"
                  android:background="@color/Black"
                  android:textColor="@color/white"
                  style="@style/LaligaStyleStandingsItems"
                  app:layout_constraintRight_toRightOf="parent"
                  app:layout_constraintTop_toTopOf="parent"
                  app:layout_constraintLeft_toLeftOf="parent"
                  app:layout_constraintBottom_toBottomOf="parent"/>
    </android.support.constraint.ConstraintLayout>
</layout>